# chat-rs

./: Cargo.toml
chat_api/: Cargo.toml
chat_api/src/: lib.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
chat_shared/: Cargo.toml
chat_shared/src/: lib.rs
