[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat_shared = { path = "../chat_shared" }
axum = { version = "0.7.1", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
mio = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4.13"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"